# Lunabotics-Robot-Code-23-24

./: .gitignore  motors  packets.txt  test
Documentation/: codeOverview.org  fileSpec.org
robotMainCode/PiCode/: PiCode.kdev4  callgrind.out.398291  callgrind.out.398524  callgrind.out.398624  callgrind.out.398944  callgrind.out.399136  callgrind.out.399414  callgrind.out.399609  callgrind.out.400026  callgrind.out.400510  callgrind.out.400672  callgrind.out.402958  callgrind.out.403214  callgrind.out.403549  callgrind.out.403924  callgrind.out.404070  callgrind.out.404379  callgrind.out.405243  callgrind.out.405455  meson.build
robotMainCode/PiCode/.kdev4/: PiCode.kdev4
robotMainCode/PiCode/include/: communicator.h  communicatorSM.h  robotActuation.h  robotControl.h  robotControlSM.h  robotControlSM.h~  robotState.h  serial.h
robotMainCode/PiCode/src/: communicator.cpp  communicatorSM.cpp  main.cpp  main.cpp~  robotActuation.cpp  robotControl.cpp  robotControlSM.cpp  robotState.cpp  serial.cpp  serialtest.cpp
robotMainCode/PiCode/subprojects/asio-1.28.1/: .meson-subproject-wrap-hash.txt  configure
robotMainCode/PiCode/subprojects/asio-1.28.1/doc/asio/: history.html  reference.html
robotMainCode/PiCode/subprojects/asio-1.28.1/doc/asio/reference/: ip__bad_address_cast.html
robotMainCode/PiCode/subprojects/asio-1.28.1/doc/asio/reference/ip__bad_address_cast/: bad_address_cast.html  what.html
robotMainCode/PiCode/subprojects/asio-1.28.1/doc/examples/diffs/allocation/: server.cpp.html
robotMainCode/PiCode/subprojects/asio-1.28.1/src/tests/: Makefile.in
(+90 files in other folders)
